infra/k8s/gateway-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: abhinandidikayil/api-gateway
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-clusip-srv
spec:
  selector:
    app: gateway-service
  ports:
    - name: gateway-service
      protocol: TCP
      port: 2000
      targetPort: 2000
