infra/k8s/order-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: abhinandidikayil/order
---
apiVersion: v1
kind: Service
metadata:
  name: order-clusip-srv
spec:
  selector:
    app: order-service
  ports:
    - name: order-service
      protocol: TCP
      port: 5000
      targetPort: 5000
