infra/k8s/product-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: abhinandidikayil/product
---
apiVersion: v1
kind: Service
metadata:
  name: product-clusip-srv
spec:
  selector:
    app: product-service
  ports:
    - name: product-service
      protocol: TCP
      port: 4000
      targetPort: 4000
