infra/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    http:
      paths:
      - path: /auth/
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 3000
      - path: /product/
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 4000
      - path: /order/
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 5000
